--- a/general.css
+++ b/general.css
@@ -10,7 +10,8 @@ ul {
     background-color: lightslategray;
 }
 .container-sub {
-    width: 90%;
+    width: 100%;
+    max-width: 90%;
     margin: 0 auto;
 }
  /* margins */
